# Weather-Forecast

./: CMakeLists.txt  README.md  config.json
lib/: CMakeLists.txt  ErrorOutput.cpp  ErrorOutput.h  HttpClient.cpp  HttpClient.h  Interface.cpp  Interface.h  ParseJson.cpp  ParseJson.h  Proxy.cpp  Proxy.h
